--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </li>
             <li>
                 <b>Васислий Орехов - </b>
-                <i>Зона поражния</i>
+                <i>Зона поражения</i>
             </li>
         </ol>
 
