--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Курневич Олег Юрьевич</h1>
     <p>Закончил Белорусскую Государственную академию Авиации, работаю на минском заводе гражданской авиации №407, контрольным мастером.
         Увлекаюсь спортом и машинами)</p>
-    <img src="https://img.freepik.com/free-photo/3d-render-little-boy-with-laptop-tools_1057-44642.jpg" alt="Boy studying IT">
+    <img src="https://img.freepik.com/free-photo/3d-render-little-boy-with-laptop-tools_1057-44642.jpg" height="300px" alt="Boy studying IT">
 
 </section>
 <section data-cy="hw1-section-about-pre">
@@ -43,7 +43,7 @@
             <li>
                 <b>Ю Несбе - </b>
                 <i>Снеговик</i>
-            </li>
+</li>
             <li>
                 <b>Dzhen Sinsero - </b>
                 <i>Не ной</i>
