--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Курневич Олег Юрьевич</h1>
     <p>Закончил Белорусскую Государственную академию Авиации, работаю на минском заводе гражданской авиации №407, контрольным мастером.
         Увлекаюсь спортом и машинами)</p>
-    <img src="https://img.freepik.com/free-photo/3d-render-little-boy-with-laptop-tools_1057-44642.jpg" height="300px" alt="Boy studying IT">
+    <img src="https://img.freepik.com/free-photo/3d-render-little-boy-with-laptop-tools_1057-44642.jpg" alt="Boy studying IT">
 
 </section>
 <section data-cy="hw1-section-about-pre">
@@ -80,30 +80,30 @@
     <input placeholder="Новый скилл" type="text">
     <button>Добавить</button>
     <hr>
-    <table border="5" data-cy="hw-about-table-pre">
-        <tr align="center">
+    <table border="1" data-cy="hw-about-table-pre">
+        <tr>
             <th >П/Н</th>
             <th ><b>Знания</b></th>
             <th ><b>Результат</b></th>
         </tr>
-        <tr align="center">
+        <tr>
             <th>1</th>
             <th><i>HTML</i></th>
             <th>So so</th>
         </tr>
-        <tr align="center">
+        <tr>
             <th>2</th>
             <th><i>CSS</i></th>
             <th>NO</th>
         </tr>
-        <tr align="center">
+        <tr>
             <th>3</th>
             <th><i>JS</i></th>
             <th>NO</th>
         </tr>
         <tr>
-            <th colspan="2" align="left">Вывод</th>
-            <th align="center">Учиться</th>
+            <th colspan="2">Вывод</th>
+            <th>Учиться</th>
         </tr>
     </table>
 </section>
