--- a/index.html
+++ b/index.html
@@ -87,23 +87,23 @@
             <th ><b>Результат</b></th>
         </tr>
         <tr>
-            <th>1</th>
-            <th><i>HTML</i></th>
-            <th>So so</th>
+            <td>1</td>
+            <td><i>HTML</i></td>
+            <td>So so</td>
         </tr>
         <tr>
-            <th>2</th>
-            <th><i>CSS</i></th>
-            <th>NO</th>
+            <td>2</td>
+            <td><i>CSS</i></td>
+            <td>NO</td>
         </tr>
         <tr>
-            <th>3</th>
-            <th><i>JS</i></th>
-            <th>NO</th>
+            <td>3</td>
+            <td><i>JS</i></td>
+            <td>NO</td>
         </tr>
         <tr>
-            <th colspan="2">Вывод</th>
-            <th>Учиться</th>
+            <td colspan="2">Вывод</td>
+            <td>Учиться</td>
         </tr>
     </table>
 </section>
