--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <link rel="stylesheet" href="\Frontend-lesson1\style.css">
     <title>It-incubator precourse</title>
 </head>
-<body>
-<header>
-    <span>IT-INCUBATOR</span>
+<body data-cy="hw2-body">
+<header data-cy="hw2-header">
+    <span data-cy="hw2-header-span">IT-INCUBATOR</span>
 </header>
 
-<section class="main-section" data-cy="hw1-section-main-pre">
-    <h1 class="main-title">Курневич Олег Юрьевич</h1>
-    <p class="main-text">Закончил Белорусскую Государственную академию Авиации, работаю на минском заводе гражданской авиации №407, контрольным мастером.
+<section class="main-section" data-cy="hw2-section-main-pre">
+    <h1 class="main-title" data-cy="hw2-main-title">Курневич Олег Юрьевич</h1>
+    <p class="main-text" data-cy="hw2-text">Закончил Белорусскую Государственную академию Авиации, работаю на минском заводе гражданской авиации №407, контрольным мастером.
         Увлекаюсь спортом и машинами)</p>
-    <img class="main-image" src="https://img.freepik.com/free-photo/3d-render-little-boy-with-laptop-tools_1057-44642.jpg" alt="Boy studying IT">
+    <img class="main-image" data-cy="hw2-main-image" src="https://img.freepik.com/free-photo/3d-render-little-boy-with-laptop-tools_1057-44642.jpg" alt="Boy studying IT">
 
 </section>
-<section class="section-title" data-cy="hw1-section-about-pre">
-    <select class="country-select">
+<section class="section-title" data-cy="hw2-section-about-pre">
+    <select class="country-select" data-cy="hw2-select-pre">
         <option value="mogilev">Mogilev</option>
         <option selected value="minsk">Minsk</option>
         <option value="grodno">Grodno</option>
@@ -30,8 +30,8 @@
         <option value="gomel">Gomel</option>
     </select>
     <div data-cy="hw1-unordered-list-box-pre">
-        <h2>Любимые блюда на вечер:) </h2>
-        <ul class="eat-list">
+        <h2 data-cy="hw2-section-title-pre">Любимые блюда на вечер:) </h2>
+        <ul class="eat-list" data-cy="hw2-frameworks-list-pre">
             <li>Жареная картошка</li>
             <li>Запеченые пельмени</li>
             <li>Плов</li>
@@ -40,8 +40,8 @@
         </ul>
     </div>
     <div data-cy="hw1-ordered-list-box-pre">
-        <h2>Рейтинг любимых книг</h2>
-        <ol class="books-list">
+        <h2 data-cy="hw2-section-title-pre">Рейтинг любимых книг</h2>
+        <ol class="books-list" data-cy="hw2-books-list-pre">
             <li>Ю Несбе - Снеговик</li>
             <li>Dzhen Sinsero - Не ной</li>
             <li>Васислий Орехов - Зона поражения</li>
@@ -49,27 +49,27 @@
 
     </div>
     <div data-cy="hw1-skills-box-pre">
-        <h2>Мои скиллы</h2>
-        <label for="HTML">
+        <h2 data-cy="hw2-section-title-pre">Мои скиллы</h2>
+        <label for="HTML" data-cy="hw2-label-pre">
             <input id="HTML" type="checkbox" checked>HTML
         </label>
-        <label for="CSS">
+        <label for="CSS" data-cy="hw2-label-pre">
             <input id="CSS" type="checkbox">CSS
         </label>
-        <label for="JavaScript">
+        <label for="JavaScript" data-cy="hw2-label-pre">
             <input id="JavaScript" type="checkbox">JavaScript
         </label>
-        <label for="PHP">
+        <label for="PHP" data-cy="hw2-label-pre">
             <input id="PHP" type="checkbox">PHP
         </label>
-        <label for="Python">
+        <label for="Python" data-cy="hw2-label-pre">
             <input id="Python" type="checkbox">Python
         </label>
     </div>
-    <input class="other-skill" placeholder="Новый скилл" type="text">
-    <button class="btn">Добавить</button>
-    <hr class="horizontal-line">
-    <table border="1" data-cy="hw-about-table-pre">
+    <input class="other-skill" data-cy="hw2-text-field-pre" placeholder="Новый скилл" type="text">
+    <button class="btn" data-cy="hw2-btn-pre">Добавить</button>
+    <hr class="horizontal-line" data-cy="hw2-line-pre">
+    <table border="1" data-cy="hw2-about-table-pre">
         <tr>
             <th >П/Н</th>
             <th ><b>Знания</b></th>
@@ -97,7 +97,7 @@
     </table>
 </section>
 <footer data-cy="hw-footer-pre">
-    <a class="link" href="https://it-incubator.io/">it-incubator</a>
+    <a class="link" data-cy="hw-footer-link-pre" href="https://it-incubator.io/">it-incubator</a>
 </footer>
 </body>
 </html>
