--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </select>
     <div data-cy="hw1-unordered-list-box-pre">
         <h2 data-cy="hw2-section-title-pre">Любимые блюда на вечер:) </h2>
-        <ul class="eat-list" data-cy="hw2-frameworks-list-pre">
+        <ul class="frameworks-list" data-cy="hw2-frameworks-list-pre">
             <li>Жареная картошка</li>
             <li>Запеченые пельмени</li>
             <li>Плов</li>
@@ -66,7 +66,7 @@
             <input id="Python" type="checkbox">Python
         </label>
     </div>
-    <input class="other-skill" data-cy="hw2-text-field-pre" placeholder="Новый скилл" type="text">
+    <input class="text-field" data-cy="hw2-text-field-pre" placeholder="Новый скилл" type="text">
     <button class="btn" data-cy="hw2-btn-pre">Добавить</button>
     <hr class="horizontal-line" data-cy="hw2-line-pre">
     <table border="1" data-cy="hw2-about-table-pre">
